# Founder_Autopilot

./: .project_meta.json  pyproject.toml
00_Notes/: DevLog.md  Idea.md
config/: tracker.sample.toml
docs/: Builder_Prompt.md  Coding_Guidelines.md  Project_Requirements.md
docs/contracts/: daemon_dashboard_api.md
docs/design/: DESIGN_SYSTEM.md  SCREEN_SPECS.md
docs/features/: backend-scaffold.md  event-ingestion.md  scoring-scheduler-reports.md
docs/issues/: FR-001.md  FR-002.md  FR-003.md  FR-004.md  FR-005.md  FR-006.md  FR-007.md  FR-008.md  FR-009.md  FR-010.md
docs/mockups/: drift-alerts.html  focus.html  notification-center.html  reports.html  settings.html  timeline.html  today.html
docs/tasks/orchestrator-sessions/orch-20260306-004407/: README.md  master_plan.md
docs/tasks/orchestrator-sessions/orch-20260306-004407/completed/: 01_genesis_prd_and_fr.task.md  03_backend_scaffold_and_data_model.task.md  04_event_ingestion_git_cos_files.task.md  05_scoring_scheduler_and_reports.task.md
docs/tasks/orchestrator-sessions/orch-20260306-004407/pending/: 01_genesis_prd_and_fr.task.md  02_design_system_and_dashboard_spec.task.md  03_backend_scaffold_and_data_model.task.md  04_event_ingestion_git_cos_files.task.md  (+4 more)
src/founder_autopilot/: __init__.py  __main__.py  adapters.py  analytics.py  cli.py  config.py  contracts.py  daemon.py  database.py  ingestion.py  normalization.py  reporting.py  scheduler.py  scoring.py
src/founder_autopilot/migrations/: 0001_initial_schema.sql
tests/: test_backend_scaffold.py  test_scoring_scheduler_reports.py
