[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "founder-autopilot"
version = "0.1.0"
description = "Local-first daemon scaffold and data model for Founder Autopilot."
readme = "docs/features/backend-scaffold.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
founder-autopilot = "founder_autopilot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
founder_autopilot = ["migrations/*.sql"]
